Refactor app a little bit & update webpack conf

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <my-app>Loading AppComponent content here ...</my-app>
+  <gp-app>Loading AppComponent content here ...</gp-app>
 </body>
 </html>
