--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>German Prostakov Blog</title>
+  <meta name="description" content="The blog of GProst, a software developer."/>
 </head>
 <body>
   <gp-app>Loading AppComponent content here ...</gp-app>
