Add Web Animations polyphil

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>German Prostakov Blog</title>
   <meta name="description" content="The blog of GProst, a software developer."/>
+  <!--Web Animations polyphil TODO: remove when no need-->
+  <script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
 </head>
 <body>
   <gp-app>
